welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: not found: value FizzBuzz
			return FizzBuzz
                               ^